kubernetes-ingress-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moodle
  namespace: moodle
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev.jti.polije.ac.id
      http:
        paths:
        - backend:
            service:
              name: moodle
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
status:
  loadBalancer: {}
